--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
