--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-checkbox-tree": "^1.7.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
